<resources>
    <string name="app_name">Mtrek</string>
    <string name="register_as_user">Register as user</string>
    <string name="register_as_driver">Register as Driver</string>
    <string name="login"> Login</string>
    <string name="new_register"> New Register</string>
    <string name="new_register_driver">New Rigister Driver</string>
    <string name="tv_userName"> UserName </string>
    <string name="tv_password"> Password </string>
    <string name="tv_repeat_password"> Confirm Password</string>
    <string name="tv_phone"> Phone Number</string>
    <string name="tv_terms_and_conditions">Terms and Conditions</string>
    <string name="tv_attach_id_photo">ID Photo</string>
    <string name="tv_register">Register</string>
    <string name="tv_login">Login</string>
    <string name="tv_forgot_my_password">Forgot Password</string>
    <string name="will_send_password_to_your_phone">Will send password in 54 seconds </string>
    <string name="tv_send">Send</string>
    <string name="enter_sent_password">Enter sent password </string>
    <string name="tv_confirm">Confirm</string>
    <string name="activation_code"> Activation Code</string>
    <string name="enter_activation_code_sent_to">Enetr sent code Activation</string>
    <string name="will_send_code_without_mins">Will send code in 85</string>
    <string name="tv_your_dirction"> Your Direction </string>
    <string name="menu_home_page"> Home Page </string>
    <string name="menu_add_new_package">New Package </string>
    <string name="menu_notification">Notifications</string>
    <string name="menu_history_package">Package History</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="static_orders">Static Orders</string>
    <string name="direct_orders">Direct Orders</string>
    <string name="order_now">أطلب الان</string>
    <string name="add_trip">إضافة رحلة</string>
    <string name="air_trasportation">جوي</string>
    <string name="land_trasportation">بري</string>
    <string name="sea_trasportation">بحري</string>
    <string name="more_details_about_your_package">اكتب هنا تفاصيل اضافية عند طردك</string>
    <string name="choose_date">أختر التاريخ</string>
    <string name="write_priece">أكتب السعر</string>
    <string name="write_details_your_trip">أكتب هنا تفاصيل رحلتك</string>
    <string name="all">الكل</string>
    <string name="done">Done</string>
    <string name="rate">التقيم</string>
</resources>










